--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,6 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root><img src="/images/loading.gif"></app-root>
+  <app-root><img src="assets/images/loading.gif"></app-root>
 </body>
 </html>
