--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root><img src="/images/loading.gif"></app-root>
+  <app-root><img src="assets/images/loading.gif"></app-root>
 <script type="text/javascript" src="inline.js"></script><script type="text/javascript" src="styles.009d9aca4f5c8f0d5269.bundle.js"></script><script type="text/javascript" src="main.0623dc0ee5832ac1ea4f.bundle.js"></script></body>
 </html>
