new gh-pages version

--- a/404.html
+++ b/404.html
@@ -7,10 +7,10 @@
   <base href="/demo-app/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
+<link href="styles.bundle.css" rel="stylesheet"/></head>
 
 <body>
   <app-root><img src="assets/images/loading.gif"></app-root>
-<script type="text/javascript" src="inline.js"></script><script type="text/javascript" src="styles.009d9aca4f5c8f0d5269.bundle.js"></script><script type="text/javascript" src="main.5510a53fe48960db47a7.bundle.js"></script></body>
+<script type="text/javascript" src="inline.bundle.js"></script><script type="text/javascript" src="scripts.bundle.js"></script><script type="text/javascript" src="main.bundle.js"></script></body>
 
 </html>
