--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
   <base href="/demo-app/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-<link href="styles.bundle.css" rel="stylesheet"/></head>
+<link href="styles.9165dddcfe972140fd71.bundle.css" rel="stylesheet"/></head>
 
 <body>
   <app-root><img src="assets/images/loading.gif"></app-root>
-<script type="text/javascript" src="inline.bundle.js"></script><script type="text/javascript" src="scripts.bundle.js"></script><script type="text/javascript" src="main.bundle.js"></script></body>
+<script type="text/javascript" src="inline.18f06583f5da4a1a067c.bundle.js"></script><script type="text/javascript" src="scripts.082df5bec5b68f36d2ac.bundle.js"></script><script type="text/javascript" src="main.ede7f90b0277401b6834.bundle.js"></script></body>
 
 </html>
