--- a/src/index.html
+++ b/src/index.html
@@ -1,16 +1,14 @@
 <!doctype html>
 <html>
-
 <head>
   <meta charset="utf-8">
-  <title>Firstapp</title>
+  <title>DemoApp</title>
   <base href="/">
+
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
-
 <body>
   <app-root><img src="assets/images/loading.gif"></app-root>
 </body>
-
 </html>
